# lakeflow-zerobus-ignition-connector

./: .env.example  .gitignore  APP-PRD.md  CLAUDE.md  DEPLOYMENT.md  Makefile  NOTICE.md  PRD.md  PROMPT.md  README.md  README_END2END_OT.md  databricks.yml  gates.sh  medallion_architecture_workshop.html  prd_rebrand-app.md  progress.txt
demo/app/: README.md  app.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt
demo/app/backend/: config.py  main.py
demo/app/backend/routes/: admin.py  analytics.py  asset_framework.py  assets.py  compression.py  config.py  events.py  health.py  helpers.py  market_weather.py  metrics.py  postgres_metrics.py  time_travel.py
demo/app/backend/services/: postgres_query.py  query.py
demo/app/backend/tests/: conftest.py  test_asset_framework_api.py  test_compression_integration.py  test_compression_unit.py  test_query_builder.py
demo/app/backend/tests/gates/: test_rebrand_ac1.py  test_rebrand_ac10.py  test_rebrand_ac11.py  test_rebrand_ac13.py  test_rebrand_ac2.py  test_rebrand_ac8.py  test_rebrand_ac9.py  test_timetravel_ac16.py  test_timetravel_ac17.py  test_timetravel_ac18.py  test_timetravel_ac19.py  test_timetravel_ac20.py  test_timetravel_ac21.py  test_timetravel_ac22.py  test_timetravel_ac4.py  test_timetravel_ac7.py
demo/app/frontend/: eslint.config.js  index.html  postcss.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
demo/app/frontend/src/: App.tsx  index.css
demo/app/frontend/src/__tests__/: App.test.tsx  Navigation.test.tsx  Theme.test.tsx  formatting.test.ts  start-script.test.ts
demo/app/frontend/src/components/: ArchitectureDiagram.tsx  AssetCard.tsx  AssetFormModal.tsx  (+24 more)
examples/agl_fleet/: Dockerfile  README.md  pyproject.toml  setup_databricks.sql
examples/agl_fleet/src/agl_fleet/: __init__.py  cli.py  client.py  generators.py
examples/agl_fleet/tests/: test_generators.py
pipelines/sdp/: README.md  pyproject.toml  verify_health_scores.sql
pipelines/sdp/src/agl_analytics/: __init__.py  config.py  health.py  market.py  revenue.py  schemas.py
pipelines/sdp/tests/: __init__.py  conftest.py  test_health.py  test_market.py  test_pipeline_integration.py  test_placeholder.py  test_revenue.py  test_schemas.py
pipelines/sdp/transformations/: __init__.py  bom_weather_demo.py  bronze_silver.py  data_blend_demo.py  data_blend_summary.sql  market_data.py  nemweb_dispatch_demo.py  revenue_risk.py  silver_analytics.py  train_health_model.py
(+425 files in other folders)
