[project]
name = "zerobus-ignition-demo-app"
version = "0.1.0"
description = "React + FastAPI app for the Zerobus/Ignition OT demo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "databricks-sdk>=0.85.0",
    "databricks-sql-connector>=3.6.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
pythonpath = ["."]
markers = [
    "integration: marks tests that require Databricks (workspace, warehouse, ot_demo.ot.raw_tags with data). Skip when DATABRICKS_WAREHOUSE_ID or auth is not set.",
]
filterwarnings = ["ignore::DeprecationWarning"]
