[project]
name = "agl-fleet-simulator"
version = "0.1.0"
description = "Direct synthetic data generator for AGL BESS Ignition demo - sends events to Gateway HTTP ingest"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
setup = [
    "databricks-sdk>=0.85.0",
]
dev = [
    "databricks-sdk>=0.85.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
]

[project.scripts]
agl-sim = "agl_fleet.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agl_fleet"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
